Revision of several labels, mosquito alert

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -724,8 +724,8 @@ function map_init_basic(map, options) {
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <div class="navbar-brand shrinking-text" title="Tigatrapp Map" style="color:orange;">
-                                <strong>Tigatrapp Map</strong></div>
+                            <div class="navbar-brand shrinking-text" title="Mosquito Alert Map" style="color:orange;">
+                                <strong>Mosquito Alert Map</strong></div>
                         </div>
                         <div class="navbar-collapse collapse">
 
