--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <meta name="format-detection" content="telephone=no">
-<title>Tigatrapp Map</title>
+<title>Mosquito Alert Map</title>
 
 
 <script src="{% static "tigamap/tigamap_scripts.js" %}"></script>
@@ -725,7 +725,7 @@ function map_init_basic(map, options) {
                                 <span class="icon-bar"></span>
                             </button>
                             <div class="navbar-brand shrinking-text" title="Mosquito Alert Map" style="color:orange;">
-                                <strong>Mosquito Alert Map </strong></div>
+                                <strong>Mosquito Alert Map</strong></div>
                         </div>
                         <div class="navbar-collapse collapse">
 
