--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -1,4 +1,4 @@
-﻿{% extends "tigahelp/base.html" %}
+{% extends "tigahelp/base.html" %}
 {% load staticfiles %}
 
 {% block page_title %}
@@ -14,13 +14,18 @@
 
     <p>Aquest projecte és possible gràcies a la implicació creixent de moltes entitats públiques i privades, així com el suport de molts professionals.</p>
 
-<p>El projecte està coordinat per l'<a href="http://www.movelab.net">ICREA-Laboratori d'Ecologia del Moviment</a> del <a href="http://www.ceab.csic.es">Centre d'Estudis Avançats de Blanes</a> del <a href="http://www.csic.es">Consell Superior d'Investigacions Científiques</a>.</p>
+<p>El projecte està coordinat per l'<a href="http://www.movelab.net">ICREA Movement Ecology Lab</a>, associat al <a href="http://www.ceab.csic.es">Centre d'Estudis Avançats de Blanes</a> del <a href="http://www.csic.es">Consell Superior d'Investigacions Científiques</a> i al Centre de Recerca Ecològica i Aplicacions Forestals (CREAF).</p>
 
-<p>El projecte està cofinançat per la <a href="http://www.fecyt.es/">Fundació Espanyola per la Ciència i la Tecnologia</a> (FECYT) i el Ministeri d'Economia i Competitivitat. Fan possible aquest projecte a més l'Obra Social "la Caixa", el programa d'ajudes a la investigació <a href="http://www.recercaixa.cat/ca/index.html">Recercaixa</a>, dins el marc del projecte "<a href="https://www.youtube.com/watch?v=XGEujAO0jdk">Ciència ciutadana: educació i recerca</a>" i l'empresa <a href="http://www.lokimica.com/">Lokímica</a>.</p>
+<p>El projecte ha estat impulsat per la Fundació Bancaria “la Caixa”.</p>
+
+   <p class='centeredImage'>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
+                ={% static "tigahelp/lacaixa.jpg" %}></a>
+    </p>
 
 
-
-    <p>Les fotografies de l'App Tigatrapp han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>.</p>
+<p>El projecte està cofinançat per L’Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut), el Ministeri d’Economia i Competitivitat, la Fundació Espanyola per a la Ciència i la Tecnologia (FECYT) i l’empresa lokímica.
+Part de les fotografies de l’app Mosquito Alert han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>. </p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
