--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -12,17 +12,26 @@
         <h1>About Tigatrapp</h1>
     </div>
 
+    <p>This project has been made possible thanks to the growing support of a number of public and private entities, as well as many professionals.</p>
 
-        <p>This project has been made possible thanks to support from multiple public and private entities and the work of numerous individuals.</p>
+    <p>The project is coordinated by the ICREA Movement Ecology Lab associated to the Centre of Advance Studies of Blanes from the Spanish Research Council (CEAB-CSIC) and the Centre for Ecological Research and Forestry Applications (CREAF).</p>
 
-<p>The project is coordinated by the <a href="http://www.movelab.net/">ICREA Movement Ecology Lab</a> at the <a href="http://www.ceab.csic.es/">Center for Advanced Studies of Blanes</a>, <a href="http://www.csic.es/">Consejo Superior de Investigaciones Científicas</a> (CEAB-CSIC), and <a href="http://www.creaf.cat/es">CREAF</a>.</p>
-<p>The project is cofinanced by the <a href="http://www.fecyt.es/">Spanish Foundation for Science and Technology</a> (FECYT) and the Ministry of Economy and Competitiveness, as well as by the "la Caixa" Foundation, the <a href="http://www.recercaixa.cat/ca/index.html">Recercaixa</a> research support program's “<a href="https://www.youtube.com/watch?v=XGEujAO0jdk">Citizen Science: Education and Research</a>“ program, and <a href="http://www.lokimica.com/">lokímica</a>.</p>
+    <p>The project has been driven by “la Caixa” Banking Foundation. </p>
+
+   <p class='centeredImage'>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
+                ={% static "tigahelp/lacaixa.jpg" %}></a>
+    </p>
 
 
-    <p>All of the photos used in Tigatrapp were provided by <a href="http://www.eritja.com">R. Eritja</a>. </p>
+    <p>The project is cofounded by the Independent Public Health Body of Girona Provincial Council (Dipsalut), the Ministry of Economy and Competitiveness, the Spanish Foundation for Science and Technology (FECYT) and the private company lokímica. 
+<p></o>Many of the photorgaphs in the app Mosquito Alert have been donated by R. Eritja.</p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
                 ={% static "tigahelp/credits_logos_2015.jpg" %}></a>
     </p>
+
+
+
 {% endblock %}
