--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -2,14 +2,14 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    About Tigatrapp
+    About Mosquitto Alert
 {% endblock %}
 
 
 {% block content %}
 
     <div class="center">
-        <h1>About Tigatrapp</h1>
+        <h1>About Mosquitto Alert</h1>
     </div>
 
     <p>This project has been made possible thanks to the growing support of a number of public and private entities, as well as many professionals.</p>
