--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -14,7 +14,8 @@
 
     <p>This project has been made possible thanks to the growing support of a number of public and private entities, as well as many professionals.</p>
 
-    <p>The project is coordinated by the ICREA Movement Ecology Lab associated to the Centre of Advance Studies of Blanes from the Spanish Research Council (CEAB-CSIC) and the Centre for Ecological Research and Forestry Applications (CREAF).</p>
+    <p>The project is coordinated by the 
+    <a href="http://www.movelab.net/">ICREA Movement Ecology Lab</a> at the <a href="http://www.ceab.csic.es/">Center for Advanced Studies of Blanes</a>, <a href="http://www.csic.es/">Consejo Superior de Investigaciones Científicas</a> (CEAB-CSIC), and the <a href="http://www.creaf.cat/es">Centre for Ecological Research and Forestry Applications (CREAF)</a>.</p>
 
     <p>The project has been driven by “la Caixa” Banking Foundation. </p>
 
@@ -25,7 +26,7 @@
 
 
     <p>The project is cofounded by the Independent Public Health Body of Girona Provincial Council (Dipsalut), the Ministry of Economy and Competitiveness, the Spanish Foundation for Science and Technology (FECYT) and the private company lokímica. 
-<p></o>Many of the photorgaphs in the app Mosquito Alert have been donated by R. Eritja.</p>
+<p></o>Many of the photorgaphs in the app Mosquito Alert have been donated by <a href="http://www.eritja.com">R. Eritja</a>.</p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
