about section changes from FB

--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -14,7 +14,7 @@
 
     <p>Aquest projecte és possible gràcies a la implicació creixent de moltes entitats públiques i privades, així com el suport de molts professionals.</p>
 
-<p>El projecte està coordinat per l'<a href="http://www.movelab.net">ICREA Movement Ecology Lab</a>, associat al <a href="http://www.ceab.csic.es">Centre d'Estudis Avançats de Blanes</a> del <a href="http://www.csic.es">Consell Superior d'Investigacions Científiques</a> i al Centre de Recerca Ecològica i Aplicacions Forestals (CREAF).</p>
+<p>El projecte està coordinat per l'<a href="http://www.movelab.net">ICREA Movement Ecology Laboratory</a>, associat al <a href="http://www.ceab.csic.es">CEAB-CSIC</a> i al <a href="http://www.creaf.cat/">CREAF</a>.</p>
 
 <p>El projecte ha estat impulsat per la Fundació Bancaria “la Caixa”.</p>
 
@@ -29,7 +29,7 @@ Part de les fotografies de l’app Mosquito Alert han estat cedides per <a href=
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos_2015.jpg" %}></a>
+                ={% static "tigahelp/credits_logos_2016.jpg" %}></a>
     </p>
 
 {% endblock %}
