--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -15,7 +15,7 @@
     <p>This project has been made possible thanks to the growing support of a number of public and private entities, as well as many professionals.</p>
 
     <p>The project is coordinated by the 
-    <a href="http://www.movelab.net/">ICREA Movement Ecology Lab</a> at the <a href="http://www.ceab.csic.es/">Center for Advanced Studies of Blanes</a>, <a href="http://www.csic.es/">Consejo Superior de Investigaciones Científicas</a> (CEAB-CSIC), and the <a href="http://www.creaf.cat/es">Centre for Ecological Research and Forestry Applications (CREAF)</a>.</p>
+    <a href="http://www.movelab.net/">ICREA Movement Ecology Laboratory</a> at <a href="http://www.ceab.csic.es/">CEAB-CSIC</a> and <a href="http://www.creaf.cat">CREAF</a>.</p>
 
     <p>The project has been driven by “la Caixa” Banking Foundation. </p>
 
@@ -30,7 +30,7 @@
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos_2015.jpg" %}></a>
+                ={% static "tigahelp/credits_logos_2016.jpg" %}></a>
     </p>
 
 
