--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -15,7 +15,7 @@
 
     <p>Este proyecto es posible gracias a la implicación creciente de muchas entidades públicas y privadas, así como el apoyo de muchos profesionales.</p>
 
-    <p>El proyecto está coordinado por el ICREA Movement Ecology Lab del Centro de Estudios Avanzados de Blanes del Consejo Superior de Investigaciones Científicas (CEAB-CSIC), y asociado al Centro de Investigación Ecológica y Aplicaciones Forestales (CREAF).</p>
+    <p>El proyecto está coordinado por el <a href="http://www.movelab.net">ICREA Movement Ecology Laboratory</a> asociado al <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y al <a href="http://www.creaf.cat/">CREAF</a></p>
 
     <p>El proyecto ha sido impulsada por la Fundación Bancaria" la Caixa.</p>
 
@@ -31,6 +31,6 @@
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos_2015.jpg" %}></a>
+                ={% static "tigahelp/credits_logos_2016.jpg" %}></a>
     </p>
 {% endblock %}
