--- a/tigahelp/templates/tigahelp/credit_image.html
+++ b/tigahelp/templates/tigahelp/credit_image.html
@@ -13,7 +13,7 @@
 <body>
 
         <p class='centeredImage'>
-            <img style='max-width: 100%; height: auto;' src={% static "tigahelp/credits_logos.jpg" %}>
+            <img style='max-width: 100%; height: auto;' src={% static "tigahelp/credits_logos_2016.jpg" %}>
         </p>
 
 </body>
