minor changes to about

--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -2,14 +2,14 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    About Mosquitto Alert
+    About Mosquito Alert
 {% endblock %}
 
 
 {% block content %}
 
     <div class="center">
-        <h1>About Mosquitto Alert</h1>
+        <h1>About Mosquito Alert</h1>
     </div>
 
     <p>This project has been made possible thanks to the growing support of a number of public and private entities, as well as many professionals.</p>
@@ -20,13 +20,15 @@
     <p>The project has been driven by “la Caixa” Banking Foundation. </p>
 
    <p class='centeredImage'>
-        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/lacaixa.jpg" %}></a>
+       <img style='max-width: 100%; height: auto;' src
+                ={% static "tigahelp/lacaixa.jpg" %}>
     </p>
 
 
-    <p>The project is cofounded by the Independent Public Health Body of Girona Provincial Council (Dipsalut), the Ministry of Economy and Competitiveness, the Spanish Foundation for Science and Technology (FECYT) and the private company lokímica. 
-<p></o>Many of the photorgaphs in the app Mosquito Alert have been donated by <a href="http://www.eritja.com">R. Eritja</a>.</p>
+    <p>The project is co-financed by the Independent Public Health Body of Girona Provincial Council (Dipsalut), the Ministry of Economy and Competitiveness, the Spanish Foundation for Science and Technology (FECYT) and the private company lokímica.</p>
+
+
+    <p>Many of the photographs in the Mosquito Alert app have been donated by <a href="http://www.eritja.com">R. Eritja</a>.</p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
