--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Sobre Tigatrapp
+    Sobre Mosquito Alert
 {% endblock %}
 
 
@@ -15,19 +15,18 @@
 
     <p>Este proyecto es posible gracias a la implicación creciente de muchas entidades públicas y privadas, así como el apoyo de muchos profesionales.</p>
 
-    <p>El proyecto está coordinado por el <a href="http://www.movelab.net">ICREA Movement Ecology Laboratory</a> asociado al <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y al <a href="http://www.creaf.cat/">CREAF</a></p>
+    <p>El proyecto está coordinado por el <a href="http://www.movelab.net">ICREA Movement Ecology Laboratory</a> asociado al <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y al <a href="http://www.creaf.cat/">CREAF</a>.</p>
 
     <p>El proyecto ha sido impulsada por la Fundación Bancaria" la Caixa.</p>
 
    <p class='centeredImage'>
-        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/lacaixa.jpg" %}></a>
-    </p>
+       <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
+   </p>
 
 
     <p>El proyecto está cofinanciado por el Organismo Autónomo de Salud Pública de la Diputación de Girona (Dipsalut), el Ministerio de Economía y Competitividad, la Fundación Española para la Ciencia y la Tecnología (FECYT) yy la empresa lokímica.</p>
 
-    <p>Las fotografías de la App Tigatrapp han sido cedidas por R. Eritja.</p>
+    <p>Las fotografías de la App Tigatrapp han sido cedidas por <a href="http://www.eritja.com">R. Eritja</a>.</p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
