--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -2,14 +2,14 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Sobre Tigatrapp
+    Sobre Mosquito Alert
 {% endblock %}
 
 
 {% block content %}
 
     <div class="center">
-        <h1>Sobre Tigatrapp</h1>
+        <h1>Sobre Mosquito Alert</h1>
     </div>
 
     <p>Aquest projecte és possible gràcies a la implicació creixent de moltes entitats públiques i privades, així com el suport de molts professionals.</p>
@@ -19,13 +19,13 @@
 <p>El projecte ha estat impulsat per la Fundació Bancaria “la Caixa”.</p>
 
    <p class='centeredImage'>
-        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/lacaixa.jpg" %}></a>
+    <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
     </p>
 
 
-<p>El projecte està cofinançat per L’Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut), el Ministeri d’Economia i Competitivitat, la Fundació Espanyola per a la Ciència i la Tecnologia (FECYT) i l’empresa lokímica.
-Part de les fotografies de l’app Mosquito Alert han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>. </p>
+<p>El projecte està cofinançat per L’Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut), el Ministeri d’Economia i Competitivitat, la Fundació Espanyola per a la Ciència i la Tecnologia (FECYT) i l’empresa lokímica.</p>
+
+<p>Part de les fotografies de l’app Mosquito Alert han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>.</p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
