typo in about text

--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -24,7 +24,7 @@
    </p>
 
 
-    <p>El proyecto está cofinanciado por el Organismo Autónomo de Salud Pública de la Diputación de Girona (Dipsalut), el Ministerio de Economía y Competitividad, la Fundación Española para la Ciencia y la Tecnología (FECYT) yy la empresa lokímica.</p>
+    <p>El proyecto está cofinanciado por el Organismo Autónomo de Salud Pública de la Diputación de Girona (Dipsalut), el Ministerio de Economía y Competitividad, la Fundación Española para la Ciencia y la Tecnología (FECYT) y la empresa lokímica.</p>
 
     <p>Las fotografías de la App Tigatrapp han sido cedidas por <a href="http://www.eritja.com">R. Eritja</a>.</p>
 
