Changed to allow superexpert identification of aegyptis

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -394,6 +394,14 @@ function get_icon(report) {
     var score = -3;
     if (report.type == 'adult') {
         if (report.movelab_annotation != null) {
+            if (report.movelab_annotation.aegypti_certainty_category && report.movelab_annotation.aegypti_certainty_category != null && report.movelab_annotation.aegypti_certainty_category > 0){
+                score = report.movelab_annotation.aegypti_certainty_category;
+                if(score == 2){
+                    return blue_red_icon;
+                }else{
+                    return blue_orange_icon;
+                }
+            }
             if (report.movelab_annotation.tiger_certainty_category != null) {
                 score = report.movelab_annotation.tiger_certainty_category;
             }
@@ -431,6 +439,18 @@ function get_cat_text(score, type) {
 function make_experts_row(score, type) {
     if (score != null) {
         return '<tr><td><div class="color-box ' + get_color_class(score) + '">' + '{% trans 'expert_row_title' %}: ' + get_cat_text(score, type) + '</div></td></tr>';
+    } else {
+        return '';
+    }
+}
+
+function make_experts_row_aegypti(score){
+    if (score !=null) {
+        if(score == 2) {
+            return '<tr><td><div class="color-box ' + get_color_class(score) + '">' + '{% trans 'expert_row_title' %}: {% trans 'expert_cat_aegypti' %}</div></td></tr>';
+        } else {
+            return '<tr><td><div class="color-box ' + get_color_class(score) + '">' + '{% trans 'expert_row_title' %}: {% trans 'expert_cat_possible_aegypti' %}</div></td></tr>';
+        }
     } else {
         return '';
     }
@@ -493,7 +513,11 @@ function make_popup_text(value) {
     {% endif %}
     if (value.type == 'adult') {
         if (value.movelab_annotation != null) {
-            return '<table class="popup-table">' + make_experts_row(value.movelab_annotation.tiger_certainty_category, value.type) + make_crowd_row(value.movelab_annotation.crowdcrafting_score_cat, value.movelab_annotation.crowdcrafting_n_response, value.type) + make_user_response_row(value.tiger_responses) + make_photo_row(value.movelab_annotation.photo_html) + make_user_note_row(value.movelab_annotation.edited_user_notes) + '</table>' + validation_link;
+            if(value.movelab_annotation.aegypti_certainty_category && value.movelab_annotation.aegypti_certainty_category!=null && value.movelab_annotation.aegypti_certainty_category > 0){
+                return '<table class="popup-table">' + make_experts_row_aegypti(value.movelab_annotation.aegypti_certainty_category) + make_photo_row(value.movelab_annotation.photo_html) + '</table>' + validation_link;
+            }else{
+                return '<table class="popup-table">' + make_experts_row(value.movelab_annotation.tiger_certainty_category, value.type) + make_crowd_row(value.movelab_annotation.crowdcrafting_score_cat, value.movelab_annotation.crowdcrafting_n_response, value.type) + make_user_response_row(value.tiger_responses) + make_photo_row(value.movelab_annotation.photo_html) + make_user_note_row(value.movelab_annotation.edited_user_notes) + '</table>' + validation_link;
+            }
         } else {
             return '<table class="popup-table">' + make_user_response_row(value.tiger_responses) + '</table>' + validation_link;
         }
@@ -952,13 +976,28 @@ function map_init_basic(map, options) {
                 </tr>
                 <tr>
                     <td>
+                        <img src="{% static 'tigamap/blue_red_dot.png' %}">
+                    </td>
+                    <td>
+                        {% trans 'expert_cat_aegypti' %}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <img src="{% static 'tigamap/yellow_orange_dot.png' %}">
                     </td>
                     <td>
                         {% trans 'expert_cat_possible_tiger' %}
                     </td>
                 </tr>
-
+                <tr>
+                    <td>
+                        <img src="{% static 'tigamap/blue_orange_dot.png' %}">
+                    </td>
+                    <td>
+                        {% trans 'expert_cat_possible_aegypti' %}
+                    </td>
+                </tr>
                 <tr>
                     <td>
                         <img src="{% static 'tigamap/yellow_white_dot.png' %}">
